[project]
name = "yammer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet>=0.85.1",
    "google-genai>=2.6.0",
    "numpy>=2.4.6",
    "pygame>=2.6.1",
    "python-dotenv>=1.2.2",
    "sounddevice>=0.5.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["audio_loop", "main"]
omit = []

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
]
